--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,7 +4,7 @@
 name = "my-svelte-app"
 main = ".svelte-kit/cloudflare/_worker.js"
 compatibility_date = "2025-12-23"
-compatibility_flags = ["nodejs_als"]
+compatibility_flags = ["nodejs_compat", "nodejs_als"]
 
 [assets]
 binding = "ASSETS"
