--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,6 +5,7 @@ name = "my-svelte-app"
 main = ".svelte-kit/cloudflare/_worker.js"
 compatibility_date = "2025-12-23"
 compatibility_flags = ["nodejs_compat", "nodejs_als"]
+external = ["better-sqlite3"]
 
 [assets]
 binding = "ASSETS"
